2001-10-24  Akim Demaille  <akim@epita.fr>

	* tests/confh.test: Since 2001-10-20 Kevin Ryde, stamp-h is
	stamp-h1.

2001-10-24  Akim Demaille  <akim@epita.fr>

	Since the ansi2knr patch from 2001-10-20 Kevin Ryde, `$U' can
	appear in Makefile.in in the clean rule.

	* tests/cxxansi.test: Adjust.

2001-10-24  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_print_error, &am_file_error, &am_macro_error)
	(&am_target_error, &am_line_error, &am_conf_error, &am_file_warning):
	Rename as...
	(&print_error, &file_error, &macro_error, &target_error, &line_error)
	(&conf_error, &file_warning): these.
	(&file_warning): Fix the prototype and argument handling.
	(&am_line_warning): Remove, unused.

	Also, repair the misapplication of previous patches.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($ac_output_location): Replace with...
	($ac_config_files_location): this.
	(&scan_autoconf_traces): We don't need $file and $line, $here is
	enough.
	(&scan_one_autoconf_file): Use `$in_ac_output' to store the macro
	name (AC_OUTPUT or AC_CONFIG_FILES) for error messages.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&require_file_with_macro): Use &require_file.
	(&read_am_file): Move the definition of $here at its proper place.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($libtool_line, $seen_pythondir): Replace with...
	($libtool_location, $pythondir_location): these.
	(&require_conf_file_with_line, &require_conf_file_with_line):
	Remove, unused.
	(&require_file): Don't forget $where.
	(&require_conf_file): Ahem...  Fix the name.
	(&require_config_file): Invoke &require_conf_file, not yourself.
	(&am_line_error): Fix the default am_file_error invocation.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($seen_lispdir): Replace with...
	($am_lispdir_location): this.
	(&require_conf_file): New.
	(&require_config_file, &require_conf_file_with_line,
	(&require_conf_file_with_conf_line): Use it.