@@ -1483,7 +1483,7 @@ sub handle_languages
 	    # Set location of depcomp.
 	    &define_variable ('depcomp', "\$(SHELL) $config_aux_dir/depcomp");
 
-	    &require_config_file ($FOREIGN, 'depcomp');
+	    &require_conf_file ("$am_file.am", $FOREIGN, 'depcomp');
 
 	    my @deplist = sort keys %dep_files;
 
@@ -1848,7 +1848,7 @@ sub handle_single_transform_list ($$$$@)
                 }
                 $object = $dname . '-' . $object;
 
-                &require_config_file ($FOREIGN, 'compile')
+                &require_conf_file ("$am_file.am", $FOREIGN, 'compile')
                     if $lang->name eq 'c';
 
                 &prog_error ("$lang->name flags defined without compiler")
@@ -5068,7 +5068,7 @@ sub lang_c_rewrite
 	    am_error ("C objects in subdir but `AM_PROG_CC_C_O' not in `$configure_ac'");
 	}
 
-	require_config_file ($FOREIGN, 'compile');
+	require_conf_file ("$am_file.am", $FOREIGN, 'compile');
     }
 
     $de_ansi_files{$base} = 1;
