@@ -1,3 +1,11 @@
+2001-10-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* automake.in (handle_languages, handle_single_transform_list,
+	lang_c_rewrite): Use require_conf_file instead of
+	require_config_file to require depcomp or compile from
+	Makefile.am.  (This is a part of my patch of 2001-10-15 which got
+	mistakenly reverted.)
+
 2001-10-24  Akim Demaille  <akim@epita.fr>
 
 	* tests/confh.test: Since 2001-10-20 Kevin Ryde, stamp-h is
